force-app/main/default/objects/Ecosystem__c/Ecosystem__c.object-meta.xml
<CustomObject>
    <label>Ecosystem</label>
    <nameField>
        <displayFormat>ECO-{0000}</displayFormat>
        <label>Ecosystem ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecosystems</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>