force-app/main/default/objects/Ecosystem__c/fields/Actual_Non_Interest_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Non_Interest_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Non Interest Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>