force-app/main/default/objects/Ecosystem__c/fields/Actual_Operating_Income__c.field-meta.xml
<CustomField>
    <fullName>Actual_Operating_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Operating Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>