force-app/main/default/objects/Ecosystem__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ecosystems</relationshipLabel>
    <relationshipName>Ecosystems</relationshipName>
    <type>Lookup</type>
</CustomField>