force-app/main/default/objects/Ecosystem__c/fields/Estimated_Banked_Entities__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Banked_Entities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Banked Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>