force-app/main/default/objects/Ecosystem__c/fields/Estimated_Total_Banked__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Banked__c</fullName>
    <formula>Estimated_Banked_Entities__c + Estimated_Banked_Individuals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Total Banked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>