force-app/main/default/objects/Ecosystem__c/fields/Estimated_Total_Unbanked__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Unbanked__c</fullName>
    <formula>Estimated_Unbanked_Entities__c + Estimated_Unbanked_Individuals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Total Unbanked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>