force-app/main/default/objects/Ecosystem__c/fields/Estimated_Unbanked_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Unbanked_Individuals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Unbanked Individuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>