force-app/main/default/objects/Ecosystem__c/fields/Relationship_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Group_Name__c</fullName>
    <label>Relationship Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>