force-app/main/default/objects/Ecosystem__c/fields/Target_Net_Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Target_Net_Interest_Income__c</fullName>
    <label>Target Net Interest Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>