force-app/main/default/objects/Ecosystem__c/fields/Target_Non_Interest_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Non_Interest_Revenue__c</fullName>
    <label>Target Non Interest Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>