force-app/main/default/objects/Ecosystem__c/fields/Target_Operational_Income__c.field-meta.xml
<CustomField>
    <fullName>Target_Operational_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Target Operational Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>