force-app/main/default/objects/Ecosystem__c/fields/Unknown_Unbanked_Shareholders_Directors__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Unbanked_Shareholders_Directors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unknown Unbanked Shareholders / Director</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>