force-app/main/default/objects/Ecosystem__c/validationRules/Require_Relationship_Group_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Relationship_Group_Number</fullName>
    <active>true</active>
    <description>This is used to make the Relationship Group Number field required.(SFP-4992)</description>
    <errorConditionFormula>ISBLANK(Relationship_Group_Number__c)</errorConditionFormula>
    <errorDisplayField>Relationship_Group_Number__c</errorDisplayField>
    <errorMessage>Please fill in the Relationship Group Number field.</errorMessage>
</ValidationRule>